fix: исправлены методы получения сущности request и классы test